[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/sprites/UI/titleBG2.png" type="Texture" id=1]
[ext_resource path="res://UI/Levels/levelTarget.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sprites/UI/titleBGJungle2.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/UI/next.png" type="Texture" id=4]
[ext_resource path="res://Themes/UI.tres" type="Theme" id=5]
[ext_resource path="res://assets/sprites/UI/button.png" type="Texture" id=6]
[ext_resource path="res://UI/Levels/Levels.gd" type="Script" id=14]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Levels" type="Node2D"]
script = ExtResource( 14 )
__meta__ = {
"_edit_vertical_guides_": [ 321.0 ]
}

[node name="BG" type="Node2D" parent="."]
scale = Vector2( 4, 4 )

[node name="bgDesert" type="TextureRect" parent="BG"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="bgJungle" type="TextureRect" parent="BG"]
margin_left = 160.0
margin_right = 320.0
margin_bottom = 120.0
texture = ExtResource( 3 )

[node name="Desert" type="Node2D" parent="."]

[node name="Level1" parent="Desert" instance=ExtResource( 2 )]
position = Vector2( 157, 92 )

[node name="Level2" parent="Desert" instance=ExtResource( 2 )]
position = Vector2( 319, 92 )
level = 2

[node name="Level3" parent="Desert" instance=ExtResource( 2 )]
position = Vector2( 485, 92 )
level = 3

[node name="Level4" parent="Desert" instance=ExtResource( 2 )]
position = Vector2( 157, 194 )
level = 4

[node name="Level5" parent="Desert" instance=ExtResource( 2 )]
position = Vector2( 319, 194 )
level = 5

[node name="Level6" parent="Desert" instance=ExtResource( 2 )]
position = Vector2( 485, 194 )
level = 6

[node name="Level7" parent="Desert" instance=ExtResource( 2 )]
position = Vector2( 157, 304 )
level = 7

[node name="Level8" parent="Desert" instance=ExtResource( 2 )]
position = Vector2( 319, 304 )
level = 8

[node name="Level9" parent="Desert" instance=ExtResource( 2 )]
position = Vector2( 485, 304 )
level = 9

[node name="goRight" type="Button" parent="Desert"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 567.0
margin_top = 217.0
margin_right = 613.0
margin_bottom = 260.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
flat = true

[node name="next" type="Sprite" parent="Desert/goRight"]
position = Vector2( 22, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="Jungle" type="Node2D" parent="."]
position = Vector2( 640, 0 )

[node name="Level1" parent="Jungle" instance=ExtResource( 2 )]
position = Vector2( 157, 92 )
level = 11
unlockedLevel = false

[node name="Level2" parent="Jungle" instance=ExtResource( 2 )]
position = Vector2( 319, 92 )
level = 12

[node name="Level3" parent="Jungle" instance=ExtResource( 2 )]
position = Vector2( 485, 92 )
level = 13

[node name="Level4" parent="Jungle" instance=ExtResource( 2 )]
position = Vector2( 157, 194 )
level = 14

[node name="Level5" parent="Jungle" instance=ExtResource( 2 )]
position = Vector2( 319, 194 )
level = 15

[node name="Level6" parent="Jungle" instance=ExtResource( 2 )]
position = Vector2( 485, 194 )
level = 16

[node name="Level7" parent="Jungle" instance=ExtResource( 2 )]
position = Vector2( 157, 304 )
level = 17

[node name="Level8" parent="Jungle" instance=ExtResource( 2 )]
position = Vector2( 319, 304 )
level = 18

[node name="Level9" parent="Jungle" instance=ExtResource( 2 )]
position = Vector2( 485, 304 )
level = 19

[node name="goLeft" type="Button" parent="Jungle"]
margin_left = 35.0
margin_top = 217.0
margin_right = 81.0
margin_bottom = 260.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
flat = true

[node name="next" type="Sprite" parent="Jungle/goLeft"]
position = Vector2( 22, 22 )
scale = Vector2( -4, 4 )
texture = ExtResource( 4 )

[node name="Back" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Back"]
position = Vector2( 322, 412 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Button" type="Button" parent="Back"]
margin_left = 224.0
margin_top = 387.0
margin_right = 418.0
margin_bottom = 423.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.87451, 0.788235, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.827451, 0.658824, 0.2, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Back"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Desert/goRight" to="." method="_on_goRight_pressed"]
[connection signal="pressed" from="Jungle/goLeft" to="." method="_on_goLeft_pressed"]
[connection signal="pressed" from="Back/Button" to="." method="_on_Button_pressed"]
